# Affinity

./: .gitignore  ASSET_PIPELINE_ROADMAP.md  CLAUDE.md  CMakeLists.txt  ENEMY_DEATH_CINEMATIC_TODO.md  NODE_MIGRATION_PLAN.md  README.md  TODO.md  affinity.gba  affinity.map  affinity.rc  affinity_prefs.ini  dls_debug.txt
docs/: AFN_API.md  COOKBOOK.md  NODE_CONVENTION.md  NODE_REFERENCE.md  PSV_CAMERA.md  REFERENCE.md
gba_runtime/: Makefile  affinity - Copy.gba  affinity_prefs.ini  build.sh
gba_runtime/include/: mapdata.h
gba_runtime/source/: affinity.map  hline_fast.s  main.c  mixer_fast.s  rasterize_convex_asm.s  rasterize_convex_tex_asm.s  tex_scanline.s
nds_runtime/: Makefile  NDS_SYMBOL_AUDIT.md  ScraperSkyline.nds  ScraperSkylineNDS.nds  affinity.elf  affinity.nds  affinity_prefs.ini
nds_runtime/include/: affinity.h  mapdata.h
nds_runtime/source/: audio.c  collision.c  fps3d.c  hud.c  main.c  mode0.c  script_glue.c  sprites.c
psp_runtime/: .gitattributes  .gitignore  Makefile  PORT_STATUS.md  build_psp.sh  main.c
psp_runtime/include/: affinity_psp.h  audio.h  billboard.h  collision.h  input.h  meshcull.h  psp_mapdata.h  psp_player.h  psp_rig.h  psp_script.h  psp_sky.h  psp_sprites.h  rig.h  scene.h  script.h  sky.h  tex.h
psp_runtime/source/: audio.c  billboard.c  collision.c  input.c  mapdata.c  meshcull.c  rig.c  scene.c  script_glue.c  sky.c  tex.c
psv_runtime/: CMakeLists.txt  PSV_PORT_STATUS.md  audio.c  main.c
psv_runtime/include/: affinity_psv.h  psv_hud.h  psv_mapdata.h  psv_nav.h  psv_player.h  psv_rail.h  psv_rig.h  psv_script.h  psv_sound.h  psv_sprites.h
src/editor/: frame_loop.cpp  frame_loop.h  llm_assistant.cpp  llm_assistant.h  main.cpp  rigged_gltf.cpp  rigged_gltf.h
src/map/: map_types.h
src/math/: math_types.h
src/navmesh/: NavMeshBuilder.cpp  NavMeshBuilder.h
src/platform/common/: afn_export_ir.h  node_script_emit.cpp  node_script_emit.h
src/platform/gba/: gba_package.cpp  gba_package.h
src/platform/nds/: dsma_emit.cpp  dsma_emit.h  nds_package.cpp  nds_package.h
src/platform/psp/: psp_package.cpp  psp_package.h
src/platform/psv/: psv_export_common.cpp  psv_export_common.h  psv_package.cpp  psv_package.h
src/viewport/: mode7_preview.cpp  mode7_preview.h
switch_runtime/: Makefile
switch_runtime/include/: affinity_psv.h  nav_bridge.h  psv_nav.h  switch_port.h
switch_runtime/source/: audio.c  main.c  nav_bridge.cpp
tools/: gen_node_entries.py  regen_node_reference.py  splice_nodes.py
working/: Makefile  affinity.elf  affinity.gba
working/include/: mapdata.h
working/source/: main.c  rasterize_convex_tex_asm.s  tex_iwram.c
